--- a/WepApp_Parse_Urals/Views/_ViewImports.cshtml
+++ b/WepApp_Parse_Urals/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using WepApp_Parse_Urals
-<!--using WepApp_Parse_Urals-->
+﻿@using WebApp_Parse_Urals
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
