--- a/WepApp_Parse_Urals/Views/Home/Contact.cshtml
+++ b/WepApp_Parse_Urals/Views/Home/Contact.cshtml
@@ -4,11 +4,11 @@
 }
 
     <div class="container">
-        <div style="margin: 25px auto; max-width: 600px; width: 100%;">
+        <div class="contact-block">
             <p class="contact">
-                Разработчик: Никитин Никита Евгеньевич <br />
+                Разработчик: <a>Никитин Никита Евгеньевич</a><br />
                 Электронная почта: <a href="mailto:wwwnikita18@gmail.com">wwwnikita18@gmail.com</a><br />
-                Vk.com: <a href="https://vk.com/gm_balass">@@Bakunin</a><br />
+                vk.com: <a href="https://vk.com/gm_balass">@@Bakunin</a><br />
                 Telegram: <a href="tg://resolve?domain=bal4ss">@@bal4ss</a>
             </p>
         </div>
